#9 fix rounded corner not showing up upon hover

--- a/css/style.css
+++ b/css/style.css
@@ -477,12 +477,28 @@ header {
 			#tabHeadings a {
 				color: white;
 			}
+			
+			
+			#tabHeadings li.selected:first-child, #tabHeadings li:hover:first-child {
+				background: #257588;
+				position: relative;
+				top: 2px;
+				-webkit-border-top-left-radius: 5px;
+			}
+
+			#tabHeadings li.selected:last-child, #tabHeadings li:hover:last-child {
+				background: #257588;
+				position: relative;
+				top: 2px;
+				-webkit-border-top-right-radius: 5px;	
+			}
 
 			#tabHeadings li.selected, #tabHeadings li:hover {
 				background: #257588;
 				position: relative;
 				top: 2px;
 			}
+
 
 		/*COMMENTS*/
 
